# photo-booth

./: .gitignore  CMakeLists.txt  build.sh  button.cpp  button.hpp  countdown_window.cpp  input.cpp  input.hpp  main.cpp  mmw.h  photo_booth.cpp  photo_booth.hpp  preview_window.cpp  preview_window.hpp  run.sh  texture_loader.hpp  upload-lambda.sh  window_manager.cpp
client/: CMakeLists.txt  countdown_window.hpp  input.cpp  input.hpp  main.cpp  photo_booth.cpp  photo_booth.hpp  texture_loader.cpp  upload_process.cpp  upload_process.hpp  window_manager.hpp
lambda/: index.mjs  package-lock.json
lambda/wedding-picture-processor/: index.mjs  package-lock.json  package.json
lambda/wedding-picture-upload/: index.mjs  package.json
site/: index.html  package-lock.json  package.json
site/public/: slideshow.html
site/src/: App.tsx  Routes.tsx
site/src/components/: ActionBar.tsx  Downloader.module.css  Downloader.tsx  Gallery.css  Gallery.tsx  MultiImageUpload.tsx  Navigation.tsx  index.tsx
site/src/contexts/: PhotosContext.tsx
site/src/pages/: DownloadPage.tsx  GalleryPage.tsx  PageTemplate.tsx  SplashPage.tsx  UploadPage.tsx  index.ts
